--- a/src/about.pug
+++ b/src/about.pug
@@ -86,4 +86,5 @@ html(lang="en")
                     +qa
             include components/footer 
             +footer
+        script(src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js") 
         script(src="js/app.min.js") 
