--- a/src/components/direction.pug
+++ b/src/components/direction.pug
@@ -179,7 +179,7 @@ mixin direction()
                                         p.practice__txt Полное сопровождение ребенка в процессе обучения
                                         p.practice__txt Полное сопровождение ребенка в процессе обучения
                                     .practice__space
-                                    button(type="button" data-target="feedback").practice__button.open-popup Отправить заявку
+                                    a(href="#form").practice__button.open-popup Отправить заявку
                                 .practice__txts.enable-md 
                                     p.practice__txt Онлайн-уроки в Zoom по 1.5 часа
                                     p.practice__txt Полное сопровождение ребенка в процессе обучения
@@ -195,7 +195,7 @@ mixin direction()
                                         p.practice__txt Полное сопровождение ребенка в процессе обучения
                                         p.practice__txt Ответы на любые вопросы в совместом чате
                                     .practice__space
-                                    button(type="button" data-target="feedback").practice__button.open-popup Отправить заявку
+                                    a(href="#form").practice__button.open-popup Отправить заявку
                                 .practice__txts.enable-md 
                                     p.practice__txt Онлайн-уроки в Zoom по 1.5 часа
                                     p.practice__txt Полное сопровождение ребенка в процессе обучения
