--- a/src/components/footer.pug
+++ b/src/components/footer.pug
@@ -6,6 +6,8 @@ mixin footer()
             .footer__top-body.container 
                 a(href="index.html" title="Главная страница").footer__logo
                     img(src="@img/logo.svg", alt="Code it online school" draggable="false")
+                a(href="index.html" title="Главная страница").footer__logo.sm
+                    img(src="@img/logo-sm.svg", alt="Code it online school" draggable="false")
                 ul.footer__list 
                     li.footer__li 
                         a(href="#!").footer__link О школе 
