--- a/src/components/lessons.pug
+++ b/src/components/lessons.pug
@@ -8,7 +8,7 @@ mixin lessons()
                         .lessons__wrapper 
                             .lessons__item 
                                 .lessons__img 
-                                    img(src="@img/lessons-img-1.png", alt="")
+                                    img(src="@img/lessons-img-1.png", alt="" draggable="false")
                                 .lessons__right 
                                     p.lessons__p Усаживаемся поудобнее, включаем камеру и приветствуем друг друга. 
                                     .lessons__arrow 
@@ -19,10 +19,10 @@ mixin lessons()
                                     .lessons__arrow 
                                         img(src="@img/lessons-arrow-2.png", alt="" draggable="false")
                                 .lessons__img 
-                                    img(src="@img/lessons-img-2.png", alt="")
+                                    img(src="@img/lessons-img-2.png", alt="" draggable="false")
                             .lessons__item 
                                 .lessons__img 
-                                    img(src="@img/lessons-img-3.png", alt="")
+                                    img(src="@img/lessons-img-3.png", alt="" draggable="false")
                                 .lessons__right 
                                     p.lessons__p Приступаем к практической части и воплощаем свои идеи!
                                     .lessons__arrow 
@@ -34,18 +34,18 @@ mixin lessons()
                             .swiper.learn__swiper 
                                 .swiper-wrapper.learn__swiper-wrapper 
                                     .swiper-slide.learn__swiper-slide 
-                                        .learn__img 
-                                            img(src="@img/learn-img-1.png", alt="" draggable="false") 
+                                        .learn__img.gif 
+                                            img(src="@img/roblox-course.gif", alt="" draggable="false") 
                                         p.learn__p Полноценные игровые миры в Roblox Studio
                                     .swiper-slide.learn__swiper-slide 
-                                        .learn__img 
-                                            img(src="@img/learn-img-2.png", alt="" draggable="false")
+                                        .learn__img.gif 
+                                            img(src="@img/3dmodelling-course.gif", alt="" draggable="false")
                                         p.learn__p Сюжетные игры и мультфильмы для самых маленьких в Scratch
                                     .swiper-slide.learn__swiper-slide 
-                                        .learn__img 
-                                            img(src="@img/learn-img-3.png", alt="" draggable="false")
+                                        .learn__img.gif 
+                                            img(src="@img/python-course.gif", alt="" draggable="false")
                                         p.learn__p Компьютерные технологии и азы программирования на Python
                                     .swiper-slide.learn__swiper-slide 
-                                        .learn__img 
-                                            img(src="@img/learn-img-4.png", alt="" draggable="false")
+                                        .learn__img.gif 
+                                            img(src="@img/3dmodelling-course.gif", alt="" draggable="false")
                                         p.learn__p Моделирование объектов и персонажей в Blender
