--- a/src/components/sign.pug
+++ b/src/components/sign.pug
@@ -1,5 +1,5 @@
 mixin sign()
-    .sign 
+    .sign#form  
         .sign__body.container 
             .sign__left 
                 h2.sign__title Запишитесь на бесплатный пробный урок!
