--- a/src/course.pug
+++ b/src/course.pug
@@ -22,4 +22,5 @@ html(lang="en")
                 +sign
             include components/footer 
             +footer
+        script(src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js") 
         script(src="js/app.min.js") 
