--- a/src/courses.pug
+++ b/src/courses.pug
@@ -18,4 +18,5 @@ html(lang="en")
                 +carousel-3
             include components/footer 
             +footer
+        script(src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js") 
         script(src="js/app.min.js") 
