--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -17,17 +17,29 @@
     &__logo{
         width: 280px;
         line-height: 0;
+        @include media(765){
+            display: none;
+        }
+        &.sm{
+            display: none;
+            @include media(765){
+                display: block;
+            }
+        }
         @include media(1375){
             width: 226px;
         }
-        @include media(768){
+        @include media(767){
             width: 167px;
         }
-        @include media(576){
-            width: 139px;
+        @include media(575){
+            width: 100px;
         }
-        @include media(425){
+        @include media(424){
             width: 79px;
+        }
+        @include media(360){
+            width: 70px;
         }
         img{
             max-width: 100%;
@@ -49,11 +61,11 @@
         line-height: 100%;
         color: #000000;   
         transition: 300ms ease-out;
-        @include media(768){
+        @include media(767){
             font-size: 16px;
             line-height: 100%;
         }
-        @include media(576){
+        @include media(575){
             font-size: 13px;
         }
         &:hover{
@@ -87,7 +99,7 @@
             font-weight: 400;
             font-size: 18px;
             line-height: 100%;
-            @include media(768){
+            @include media(1375){
                 border: 1px solid #000000;
             }
         }
@@ -139,12 +151,12 @@
                     display: none;
                 }
             }
-            @include media(768){
+            @include media(767){
                 font-size: 14px;
                 line-height: 100%;
                 text-align: center;
             }
-            @include media(576){
+            @include media(575){
                 font-size: 13px;
                 line-height: 100%;
                 color: #646464;
@@ -166,11 +178,11 @@
         font-size: 18px;
         line-height: 100%;
         color: #000000;
-        @include media(768){
+        @include media(767){
             font-size: 14px;
             line-height: 100%;
         }
-        @include media(576){
+        @include media(575){
             font-size: 13px;
             line-height: 100%;
         }
