--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 .header{
     &__top{
         background: #fff;
-        @include media(768){
+        @include media(767){
             display: none;
         }
         &-body{
@@ -42,7 +42,7 @@
             align-items: center;
             justify-content: space-between;
             padding: 0 30px 0 25px !important;
-            @include media(576){
+            @include media(575){
                 height: 66px;
                 padding: 0 25px 0 20px !important;
             }
@@ -54,7 +54,7 @@
         justify-content: center;
         width: 200px;
         line-height: 0;
-        @include media(576){
+        @include media(575){
             width: 162px;
         }
         img{
@@ -67,7 +67,10 @@
         justify-content: center;
         gap: 50px;
         list-style-type: none;
-        @include media(768){
+        @include media(1375){
+            gap: 20px;
+        }
+        @include media(767){
             display: none;
         }
     }
@@ -99,7 +102,7 @@
         background: none;
         display: none;
         z-index: 50;
-        @include media(768) {
+        @include media(767) {
           display: block;
         }
         &.open {
@@ -140,7 +143,7 @@
     }
     &__menu{
         display: none;
-        @include media(768){
+        @include media(767){
             display: flex;
             flex-direction: column;
             align-items: center;
