--- a/src/scss/layout/_lessons.scss
+++ b/src/scss/layout/_lessons.scss
@@ -12,7 +12,7 @@
     @include media(1024){
         padding: 40px 50px 60px 50px;
     }
-    @include media(768){
+    @include media(767){
         padding: 35px 22px 40px;
     }
     @include media(575){
@@ -38,7 +38,7 @@
             font-size: 30px;
             line-height: 100%;
         }
-        @include media(768){
+        @include media(767){
             font-size: 27px;
             line-height: 100%;
         }
@@ -84,21 +84,27 @@
         }
     }
     &__img{
+        min-width: 685px;
+        width: 685px;
         @include media(1375){
-            max-width: 482px;
-            width: 100%;
+            min-width: 482px;
+            width: 482px;
         }
         @include media(1024){
-            max-width: 350px;
+            min-width: 350px;
+            width: 350px;
         }
-        @include media(768){
-            max-width: 276px;
+        @include media(767){
+            min-width: 276px;
+            width: 276px;
         }
         @include media(575){
-            max-width: 222px;
+            min-width: 222px;
+            width: 222px;
         }
-        @include media(425){
-            max-width: 195px;
+        @include media(424){
+            min-width: 195px;
+            width: 195px;
         }
         img{
             width: 100%;
@@ -122,7 +128,7 @@
             font-size: 22px;
             line-height: 100%;
         }
-        @include media(768){
+        @include media(767){
             font-size: 18px;
             line-height: 100%;
             max-width: 210px;
@@ -132,7 +138,7 @@
             line-height: 100%;
             margin-bottom: 15px;
         }
-        @include media(425){
+        @include media(424){
             font-size: 15px;
             line-height: 100%;
         }
@@ -142,7 +148,7 @@
             max-width: 55px;
             width: 100%;
         }
-        @include media(768){
+        @include media(767){
             max-width: 40px;
         }
         @include media(375){
@@ -167,13 +173,13 @@
     @include media(1024){
         padding: 0 40px 33px 39px;
     }
-    @include media(768){
+    @include media(767){
         padding: 0 22px 35px 22px;
     }
     @include media(575){
         padding-bottom: 30px;
     }
-    @include media(425){
+    @include media(424){
         padding: 0 22px 20px 22px;
     }
     &__title{
@@ -193,7 +199,7 @@
             line-height: 100%;
             margin-bottom: 20px;
         }
-        @include media(768){
+        @include media(767){
             font-size: 27px;
             line-height: 100%;
         }
@@ -227,7 +233,7 @@
             font-size: 22px;
             line-height: 100%;
         }
-        @include media(768){
+        @include media(767){
             font-size: 19px;
             line-height: 100%;
             max-width: 350px;
@@ -236,7 +242,7 @@
         @include media(575){
             max-width: 100%;
         }
-        @include media(425){
+        @include media(424){
             font-size: 15px;
             line-height: 100%;
             max-width: 255px;
@@ -279,13 +285,13 @@
         @include media(1375){
             margin-bottom: 10px;
         }
-        @include media(768){
+        @include media(767){
             max-width: 350px;
         }
         @include media(575){
             max-width: 100%;
         }
-        @include media(425){
+        @include media(424){
             max-width: 255px;
         }
         img{
@@ -293,6 +299,9 @@
             height: 100%;
             position: absolute;
             border-radius: 40px;
+            @include media(767){
+                border-radius: 30px;
+            }
             @include media(575){
                 border-radius: 20px;
             }
