--- a/src/scss/layout/_who.scss
+++ b/src/scss/layout/_who.scss
@@ -2,13 +2,13 @@
     padding-bottom: 50px;
     &__body{
         padding: 50px 15px 0 15px;
-        @include media(768){
+        @include media(767){
             padding: 35px 15px;
         }
-        @include media(576){
+        @include media(575){
             padding: 30px 15px;
         }
-        @include media(425){
+        @include media(424){
             padding: 15px;
         }
     }
@@ -20,22 +20,28 @@
         @include media(1024){
             padding: 0 20px;
         }
-        @include media(768){
+        @include media(767){
             margin-bottom: 35px;
         }
-        @include media(576){
+        @include media(575){
             margin-bottom: 30px;
             padding: 0;
         }
-        @include media(425){
+        @include media(424){
             margin-bottom: 15px;
         }
     }
-    &__p{
+    &__desc{
         font-weight: 400;
         font-size: 18px;
         line-height: 100%;
         color: #000000;
+        @include media(1024){
+            font-size: 16px;
+        }
+        @include media(424){
+            font-size: 15px;
+        }
     }
     &__info{
         background: #FFFFFF;
@@ -45,6 +51,9 @@
         display: flex;
         flex-direction: column;
         gap: 40px;     
+        @include media(1375){
+            border: 1px solid #000000;
+        }
         @include media(1024){
             max-width: 601px;
             width: 100%;
@@ -77,7 +86,7 @@
                 @include media(1024){
                     width: 100px;
                 }
-                @include media(768){
+                @include media(767){
                     width: 89px;
                 }
                 img{
@@ -96,7 +105,7 @@
                     line-height: 100%;
                     margin-bottom: 10px;
                 }
-                @include media(768){
+                @include media(767){
                     font-size: 20px;
                     line-height: 100%;
                     margin-bottom: 5px;
@@ -107,7 +116,7 @@
                 font-size: 15px;
                 line-height: 100%;
                 color: #646464;    
-                @include media(768){
+                @include media(767){
                     font-size: 13px;
                     line-height: 100%;
                 }            
@@ -124,7 +133,7 @@
                     font-size: 16px;
                     line-height: 100%;
                 }
-                @include media(768){
+                @include media(767){
                     font-size: 15px;
                     line-height: 100%;
                 }
@@ -190,10 +199,10 @@
         @include media(1024){
             gap: 35px 20px;
         }
-        @include media(768){
+        @include media(767){
             gap: 35px 15px;
         }
-        @include media(576){
+        @include media(575){
             gap: 35px 20px;
             width: 290px;
             margin-left: auto;
@@ -207,10 +216,10 @@
             @include media(1024){
                 width: calc(25% - 15px);
             }
-            @include media(768){
+            @include media(767){
                 width: calc(25% - 11.3px);
             }
-            @include media(576){
+            @include media(575){
                 width: calc(50% - 10px);
             }
             &-img{
@@ -221,7 +230,7 @@
                 margin-left: auto;
                 margin-right: auto;
                 line-height: 0;
-                @include media(768){
+                @include media(767){
                     width: 89px;
                     height: 89px;
                 }
@@ -251,11 +260,11 @@
                     font-size: 18px;
                     line-height: 100%;
                 }
-                @include media(768){
+                @include media(767){
                     font-size: 15px;
                     line-height: 100%;
                 }
-                @include media(425){
+                @include media(424){
                     font-size: 16px;
                     line-height: 100%;
                 }
@@ -266,7 +275,7 @@
                 line-height: 100%;
                 text-align: center;
                 color: #646464;
-                @include media(768){
+                @include media(767){
                     font-size: 13px;
                     line-height: 100%;
                 }
