--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     -webkit-tap-highlight-color: transparent;
     font-family: 'Jost', sans-serif;
+    scroll-behavior: smooth;
     &:focus,
     &:active{
         outline: none;
@@ -31,7 +32,7 @@ body{
 }
 button{
     background: none;
-    border: none;
+    border: none; 
     cursor: pointer;
 }
 .container{
@@ -41,6 +42,18 @@ button{
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+    @include media(1375){
+        max-width: 984px;
+    }
+    @include media(1024){
+        max-width: 748px;
+    }
+    @include media(767){
+        max-width: 556px;
+    }
+    @include media(575){
+        max-width: 404px;
+    }
     &-lg{
         max-width: 1086px;
         width: 100%;
@@ -79,7 +92,7 @@ a{
     border: 2px solid #141E2D;
     border-radius: 40px;
     transition: 300ms ease-out;
-    @include media(768){
+    @include media(1375){
         border: 1px solid #141E2D;
     }
     &:hover,
@@ -96,7 +109,7 @@ a{
         border: 2px solid #141E2D;
         border-radius: 40px;
         transition: 300ms ease-out;
-        @include media(768){
+        @include media(1375){
             border: 1px solid #141E2D;
         } 
         &:hover,
@@ -122,7 +135,7 @@ a{
         display: flex;
         flex: 1 1 auto;
         width: 100%;
-        @include media(768){
+        @include media(767){
             padding: 0 10px;
         }
     }
@@ -132,10 +145,10 @@ a{
         border: 2px solid #000000;
         border-radius: 40px;
         width: 100%;
-        @include media(768){
+        @include media(1375){
             border: 1px solid #000000;
         }
-        @include media(576){
+        @include media(575){
             border-radius: 20px;
         }
     }
@@ -155,11 +168,11 @@ a{
         font-size: 30px;
         line-height: 100%;
     }
-    @include media(768){
+    @include media(767){
         font-size: 27px;
         line-height: 100%;
     }
-    @include media(576){
+    @include media(575){
         font-size: 20px;
         line-height: 100%;
         margin-bottom: 20px;
@@ -222,26 +235,41 @@ a{
         transform: translateX(100%);
         transition: 800ms cubic-bezier(0.68,-0.55,0.265,1.55);
         max-height: 90%;
-        overflow: auto;
+        padding-right: 20px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        &.big{
+            height: 600px;
+        }
+        @include media(1375){
+            border: 1px solid #000000;
+        }
         @include media(1024){
             border-radius: 30px;
         }
-        @include media(768){
-            border: 1px solid #000000;
+        @include media(767){
+            padding-right: 12.5px;
+            padding-top: 12.5px;
+            padding-bottom: 12.5px;
         }
-        @include media(576){
+        @include media(575){
             border-radius: 20px;
         }
     }
     &__inner{
-        padding: 40px;
-        @include media(768){
-            padding: 25px;
+        height: 100%;
+        overflow: auto;
+    }
+    &__track{
+        height: max-content;
+        padding: 20px 20px 20px 40px;
+        @include media(767){
+            padding: 12.5px 12.5px 12.5px 25px;
         }
     }
     &__header{
         margin-bottom: 35px;
-        @include media(768){
+        @include media(767){
             margin-bottom: 15px;
         }
     }
@@ -259,17 +287,17 @@ a{
             font-size: 30px;
             line-height: 100%;
         }
-        @include media(768){
+        @include media(767){
             font-size: 27px;
             line-height: 100%;
             margin-bottom: 20px;
         }
-        @include media(576){
+        @include media(575){
             font-size: 20px;
             line-height: 100%;
             margin-bottom: 15px;
         }
-        @include media(425){
+        @include media(424){
             margin-bottom: 10px;
         }
     }
@@ -282,11 +310,11 @@ a{
             font-size: 22px;
             line-height: 100%;
         }
-        @include media(768){
+        @include media(767){
             font-size: 19px;
             line-height: 100%;
         }
-        @include media(576){
+        @include media(575){
             font-size: 16px;
             line-height: 100%;
         }  
@@ -298,11 +326,11 @@ a{
         &-p{
             font-size: 17px;
             line-height: 100%;
-            @include media(768){
+            @include media(767){
                 font-size: 10px;
                 line-height: 100%;
             }
-            @include media(425){
+            @include media(424){
                 font-size: 8px;
                 line-height: 100%;
             }
@@ -316,21 +344,23 @@ a{
         border-radius: 40px;
         padding: 21px 24px;
         height: 60px;
-        @include media(768){
+        @include media(1375){
             border: 1px solid #141E2D;
+        }
+        @include media(767){
             height: 40px;
         }
-        @include media(576){
+        @include media(575){
             font-size: 13px;
             line-height: 100%;
         }
     }
     &__btn{
         height: 60px;
-        @include media(768){
+        @include media(767){
             height: 40px;
         }
-        @include media(576){
+        @include media(575){
             padding: 10px 17px;
         }
     }
@@ -346,9 +376,11 @@ a{
         width: calc(50% - 12.5px);
         border: 2px solid #000000;
         padding: 30px 20px;
-        @include media(768){
-            border-radius: 30px;
+        @include media(1375){
             border: 1px solid #000;
+        }
+        @include media(767){
+            border-radius: 30px;
         }
         &:hover{
             box-shadow: -92px 114px 58px rgba(0, 0, 0, 0.01), -52px 64px 49px rgba(0, 0, 0, 0.05), -23px 28px 37px rgba(0, 0, 0, 0.09), -6px 7px 20px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
@@ -359,7 +391,7 @@ a{
             line-height: 100%;
             margin-bottom: 15px;
             color: #000000;
-            @include media(768){
+            @include media(767){
                 font-size: 18px;
                 line-height: 100%;
                 margin-bottom: 5px;
@@ -377,7 +409,7 @@ a{
             font-size: 15px;
             line-height: 100%;
             color: #5A0AA7;
-            @include media(768){
+            @include media(767){
                 font-size: 12px;
             }
         }
@@ -386,7 +418,7 @@ a{
             font-size: 15px;
             line-height: 100%;
             color: #5A0AA7;
-            @include media(768){
+            @include media(767){
                 font-size: 12px;
             }
         }
@@ -394,7 +426,7 @@ a{
             margin-left: auto;
             width: 80px;
             height: 80px;
-            @include media(768){
+            @include media(767){
                 width: 40px;
                 height: 40px;
             }
@@ -415,16 +447,16 @@ a{
         @include media(1376){
             padding: 50px 43px;
         }
-        @include media(768){
+        @include media(767){
             padding: 40px 25px;
             flex-direction: column;
             gap: 35px;
         }
-        @include media(576){
+        @include media(575){
             padding: 35px 25px;
             gap: 25px;
         }
-        @include media(425){
+        @include media(424){
             flex-direction: column;
             padding: 30px 25px;
             gap: 20px;
@@ -441,7 +473,7 @@ a{
         flex-direction: column;
         justify-content: space-between;
         svg{
-            @include media(768){
+            @include media(767){
                 position: absolute;
                 bottom: 35px;
                 right: 25px;
@@ -466,14 +498,14 @@ a{
         line-height: 100%;
         margin-bottom: 15px;
         color: #141E2D;
-        @include media(768){
+        @include media(767){
             font-size: 27px;
             line-height: 100%;
         }
-        @include media(576){
+        @include media(575){
             font-size: 24px;
         }
-        @include media(425){
+        @include media(424){
             font-size: 20px;
         }
     }
@@ -483,14 +515,14 @@ a{
         line-height: 100%;
         color: #000000;
         margin-bottom: 40px;
-        @include media(768){
+        @include media(767){
             margin-bottom: 0;
             font-size: 19px;
         }
-        @include media(576){
+        @include media(575){
             font-size: 16px;
         }
-        @include media(425){
+        @include media(424){
             font-size: 15px;
         }
     }
@@ -500,10 +532,10 @@ a{
         justify-content: space-between;
         gap: 60px 12px;
         margin-bottom: 40px;
-        @include media(768){
+        @include media(767){
             gap: 44px 12px;
         }
-        @include media(576){
+        @include media(575){
             gap: 20px 12px;
         }
     }
@@ -515,7 +547,7 @@ a{
             line-height: 100%;
             margin-bottom: 10px;
             color: #141E2D;
-            @include media(768){
+            @include media(767){
                 font-size: 15px;
             }
         }
@@ -527,18 +559,18 @@ a{
             @include media(1376){
                 font-size: 22px;
             }
-            @include media(768){
+            @include media(767){
                 font-size: 19px;
             }
         }
     }
     &__btn{
-        @include media(768){
+        @include media(767){
             font-size: 18px;
             padding: 10px 30px;
             width: max-content;
         }
-        @include media(576){
+        @include media(575){
             font-size: 15px;
             padding: 10px 20px;
         }
@@ -552,13 +584,13 @@ a{
         @include media(1376){
             padding: 50px 43px;
         }
-        @include media(768){
+        @include media(767){
             padding: 40px 25px;
         }
-        @include media(576){
+        @include media(575){
             padding: 35px 25px;
         }
-        @include media(425){
+        @include media(424){
             padding: 30px 25px;
         }
         @include media(375){
@@ -574,19 +606,19 @@ a{
             width: 130px;
             height: 130px;
         }
-        @include media(768){
+        @include media(767){
             top: 40px;
             right: 25px;
             width: 110px;
             height: 110px;
         }
-        @include media(576){
+        @include media(575){
             top: 35px;
             right: 25px;
             width: 80px;
             height: 80px;
         }
-        @include media(425){
+        @include media(424){
             top: 30px;
         }
         @include media(375){
@@ -603,21 +635,21 @@ a{
             @include media(1376){
                 width: calc(100% - 140px);
             }
-            @include media(768){
+            @include media(767){
                 width: calc(100% - 120px);
                 margin-bottom: 25px;
             }
-            @include media(576){
+            @include media(575){
                 width: calc(100% - 90px);
                 margin-bottom: 20px;
             }
         }
         &:not(:last-of-type){
             margin-bottom: 44px;
-            @include media(768){
+            @include media(767){
                 margin-bottom: 25px;
             }
-            @include media(576){
+            @include media(575){
                 margin-bottom: 20px;
             }
         }
@@ -631,10 +663,10 @@ a{
         @include media(1376){
             font-size: 24px;
         }
-        @include media(768){
+        @include media(767){
             font-size: 20px;
         }
-        @include media(576){
+        @include media(575){
             margin-bottom: 15px;
         }
     }
@@ -646,13 +678,13 @@ a{
         @include media(1376){
             font-size: 22px;
         }
-        @include media(768){
+        @include media(767){
             font-size: 19px;
         }
-        @include media(576){
+        @include media(575){
             font-size: 16px;
         }
-        @include media(425){
+        @include media(424){
             font-size: 15px;
         }
     }
@@ -664,13 +696,13 @@ a{
         @include media(1376){
             padding: 50px 43px;
         }
-        @include media(768){
+        @include media(767){
             padding: 40px 25px;
         }
-        @include media(576){
+        @include media(575){
             padding: 35px 25px;
         }
-        @include media(425){
+        @include media(424){
             padding: 30px 25px;
         }
         @include media(375){
@@ -689,10 +721,10 @@ a{
         @include media(1024){
             font-size: 30px;
         }
-        @include media(768){
+        @include media(767){
             font-size: 27px;
         }
-        @include media(576){
+        @include media(575){
             font-size: 20px;
         }
     }
@@ -705,14 +737,14 @@ a{
         @include media(1376){
             font-size: 22px;
         }
-        @include media(768){
+        @include media(767){
             font-size: 19px;
         }
-        @include media(576){
+        @include media(575){
             font-size: 16px;
             margin-bottom: 20px;
         }
-        @include media(425){
+        @include media(424){
             font-size: 15px;
         }
     }
@@ -722,7 +754,7 @@ a{
         border-radius: 40px;
         overflow: hidden;
         line-height: 0;
-        @include media(576){
+        @include media(575){
             border: 8px solid #EEE6F5;
         }
         img{
@@ -741,12 +773,12 @@ a{
         @include media(1024){
             padding-top: 40px;
         }
-        @include media(768){
+        @include media(767){
             padding-top: 35px;
             padding-left: 0;
             padding-right: 0;
         }
-        @include media(576){
+        @include media(575){
             padding-top: 20px;
         }
     }
@@ -764,11 +796,11 @@ a{
             font-size: 30px;
             margin-bottom: 20px;
         }
-        @include media(768){
+        @include media(767){
             font-size: 27px;
             margin-bottom: 12px;
         }
-        @include media(576){
+        @include media(575){
             font-size: 20px;
         }
         span{
@@ -778,7 +810,7 @@ a{
             &::before{
                 content: "";
                 position: absolute;
-                background: url(../img/text-overlay.svg) center/cover no-repeat;
+                background: url(../img/text-overlay-long.svg) center/cover no-repeat;
                 background-size: 100% auto;
                 width: 100%;
                 height: 50px;
@@ -798,8 +830,8 @@ a{
                     height: 30px;
                     bottom: -5px;   
                 }
-                @include media(576){
-                    height: 40px;
+                @include media(575){
+                    height: 34px;
                     bottom: -10px;
                 }
             }
@@ -827,18 +859,19 @@ a{
         padding: 35px;
         @include media(1375){
             width: 390px;
+            border: 1px solid #000000;
         }
         @include media(1024){
             padding: 25px;
             width: 365px;
         }
-        @include media(768){
+        @include media(767){
             width: 311px;
         }
-        @include media(576){
+        @include media(575){
             padding: 20px;
         }
-        @include media(425){
+        @include media(424){
             width: 285px;
         }
         &-header{
@@ -857,10 +890,10 @@ a{
             @include media(1375){
                 font-size: 24px;
             }
-            @include media(768){
+            @include media(767){
                 font-size: 20px;
             }
-            @include media(576){
+            @include media(575){
                 font-size: 18px;
             }
         }
@@ -876,13 +909,13 @@ a{
             @include media(1024){
                 margin-bottom: 30px;
             }
-            @include media(768){
+            @include media(767){
                 font-size: 19px;
             }
-            @include media(576){
+            @include media(575){
                 font-size: 16px;
             }
-            @include media(425){
+            @include media(424){
                 font-size: 15px;
             }
         }
@@ -894,7 +927,7 @@ a{
             width: 90px;
             height: 90px;
         }
-        @include media(768){
+        @include media(767){
             width: 53px;
             height: 53px;
         }
