--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -1,7 +1,7 @@
 mixin header(link)
     header.header 
         nav.header__top 
-            .header__top-body.container
+            .header__top-body.container-fixed
                 .header__soc 
                     a(href="#!" title="vk").header__soc-item   
                         img(src="@img/vk.svg", alt="" draggable="false")
@@ -11,7 +11,7 @@ mixin header(link)
                         img(src="@img/whatsapp.svg", alt="" draggable="false")
                 a(href="mailto:codeit-school@ya.ru").header__mail codeit-school@ya.ru 
         nav.header__nav
-            .header__nav-body.container
+            .header__nav-body.container-fixed
                 a(href="index.html" title="Главная страница").header__logo.gif
                     img(src="img/logo.gif", alt="Code it" draggable="false")
                 ul.header__list 
