--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -54,6 +54,14 @@ button{
     @include media(575){
         max-width: 404px;
     }
+    &-fixed{
+        max-width: 1337px;
+        width: 100%;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-left: auto;
+        margin-right: auto;
+    }
     &-lg{
         max-width: 1086px;
         width: 100%;
@@ -61,6 +69,21 @@ button{
         padding-right: 15px;
         margin-left: auto;
         margin-right: auto;
+        @include media(1375){
+            max-width: 825px;
+        }
+        @include media(1024){
+            max-width: 711px;
+        }
+        @include media(767){
+            max-width: 532px;
+        }
+        @include media(575){
+            max-width: 408px;
+        }
+        @include media(424){
+            max-width: 365px;
+        }
     }
     &-md{
         max-width: 990px;
